--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "sequelize": "*",
