--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
+    "path": "^0.12.7",
     "sequelize": "*",
     "sequelize-cli": "^6.3.0"
   }
